--- a/EnglishLearning.TaskService.Web/EnglishLearning.TaskService.Web.csproj
+++ b/EnglishLearning.TaskService.Web/EnglishLearning.TaskService.Web.csproj
@@ -1,9 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc">
+      <Version>2.1.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EnglishLearning.TaskService.Application\EnglishLearning.TaskService.Application.csproj" />
