End persistence project

--- a/EnglishLearning.TaskService.Host/appsettings.json
+++ b/EnglishLearning.TaskService.Host/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDbConfiguration": {
+    "ServerAddress": "mongodb://localhost:27017",
+    "DatabaseName": "EnglishLearning_TaskService"
+  }
 }
