--- a/EnglishLearning.TaskService.Persistence/EnglishLearning.TaskService.Persistence.csproj
+++ b/EnglishLearning.TaskService.Persistence/EnglishLearning.TaskService.Persistence.csproj
@@ -3,6 +3,18 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration">
+      <Version>2.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection">
+      <Version>2.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Options">
+      <Version>2.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions">
+      <Version>2.1.1</Version>
+    </PackageReference>
     <PackageReference Include="MongoDB.Driver">
       <Version>2.7.0</Version>
     </PackageReference>
