--- a/EnglishLearning.TaskService.Application/EnglishLearning.TaskService.Application.csproj
+++ b/EnglishLearning.TaskService.Application/EnglishLearning.TaskService.Application.csproj
@@ -3,6 +3,9 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AutoMapper">
+      <Version>7.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Mvc">
       <Version>2.1.1</Version>
     </PackageReference>
