--- a/EnglishLearning.TaskService.Tests/EnglishLearning.TaskService.Tests.csproj
+++ b/EnglishLearning.TaskService.Tests/EnglishLearning.TaskService.Tests.csproj
@@ -6,10 +6,12 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.4.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+    <PackageReference Include="NSubstitute" Version="3.1.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\EnglishLearning.TaskService.Application\EnglishLearning.TaskService.Application.csproj" />
     <ProjectReference Include="..\EnglishLearning.TaskService.Persistence\EnglishLearning.TaskService.Persistence.csproj" />
   </ItemGroup>
 </Project>
