--- a/EnglishLearning.TaskService.Application/EnglishLearning.TaskService.Application.csproj
+++ b/EnglishLearning.TaskService.Application/EnglishLearning.TaskService.Application.csproj
@@ -11,6 +11,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\EnglishLearning.TaskService.Infrastructure\EnglishLearning.TaskService.Infrastructure.csproj" />
     <ProjectReference Include="..\EnglishLearning.TaskService.Persistence\EnglishLearning.TaskService.Persistence.csproj" />
   </ItemGroup>
 </Project>
