--- a/EnglishLearning.TaskService.Web/EnglishLearning.TaskService.Web.csproj
+++ b/EnglishLearning.TaskService.Web/EnglishLearning.TaskService.Web.csproj
@@ -10,4 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\EnglishLearning.TaskService.Application\EnglishLearning.TaskService.Application.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Configuration" />
+  </ItemGroup>
 </Project>
