Add ability to run in Docker

--- a/EnglishLearning.TaskService.Host/appsettings.Development.json
+++ b/EnglishLearning.TaskService.Host/appsettings.Development.json
@@ -4,6 +4,10 @@
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
+    },
+    "MongoDbConfiguration": {
+      "ServerAddress": "mongodb://localhost:27017",
+      "DatabaseName": "EnglishLearning_TaskService"
     }
   }
 }
