--- a/EnglishLearning.TaskService.Host/appsettings.json
+++ b/EnglishLearning.TaskService.Host/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "MongoDbConfiguration": {
-    "ServerAddress": "mongodb://localhost:27017",
+    "ServerAddress": "mongodb://mongodb:27017",
     "DatabaseName": "EnglishLearning_TaskService"
   }
 }
