--- a/EnglishLearning.TaskService.Application/EnglishLearning.TaskService.Application.csproj
+++ b/EnglishLearning.TaskService.Application/EnglishLearning.TaskService.Application.csproj
@@ -6,6 +6,15 @@
     <PackageReference Include="AutoMapper">
       <Version>7.0.1</Version>
     </PackageReference>
+    <PackageReference Include="EnglishLearning.Utilities.Enums">
+      <Version>1.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="EnglishLearning.Utilities.Expressions">
+      <Version>1.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="EnglishLearning.Utilities.Linq">
+      <Version>1.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Mvc">
       <Version>2.1.1</Version>
     </PackageReference>
