--- a/EnglishLearning.TaskService.Application/EnglishLearning.TaskService.Application.csproj
+++ b/EnglishLearning.TaskService.Application/EnglishLearning.TaskService.Application.csproj
@@ -1,26 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper">
       <Version>7.0.1</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Enums">
-      <Version>1.0.0</Version>
+      <Version>1.1.0-CI-20190210-164754</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Expressions">
-      <Version>1.0.0</Version>
+      <Version>1.1.0-CI-20190210-164754</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Linq">
-      <Version>1.0.1</Version>
+      <Version>1.1.0-CI-20190210-164754</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Mvc">
-      <Version>2.1.1</Version>
+      <Version>2.2.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\EnglishLearning.TaskService.Infrastructure\EnglishLearning.TaskService.Infrastructure.csproj" />
     <ProjectReference Include="..\EnglishLearning.TaskService.Persistence\EnglishLearning.TaskService.Persistence.csproj" />
   </ItemGroup>
 </Project>
