--- a/EnglishLearning.TaskService.Host/EnglishLearning.TaskService.Host.csproj
+++ b/EnglishLearning.TaskService.Host/EnglishLearning.TaskService.Host.csproj
@@ -7,6 +7,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Swashbuckle.AspNetCore">
+      <Version>4.0.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EnglishLearning.TaskService.Web\EnglishLearning.TaskService.Web.csproj" />
