--- a/EnglishLearning.TaskService.Host/appsettings.Development.json
+++ b/EnglishLearning.TaskService.Host/appsettings.Development.json
@@ -1,13 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  },
   "MongoDbConfiguration": {
     "ServerAddress": "mongodb://localhost:27017",
     "DatabaseName": "EnglishLearning_TaskService"
+  },
+  "ConnectionStrings": {
+    "RedisDatabase": "localhost"
   }
 }
