--- a/EnglishLearning.TaskService.Host/appsettings.json
+++ b/EnglishLearning.TaskService.Host/appsettings.json
@@ -1,12 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
   "MongoDbConfiguration": {
     "ServerAddress": "mongodb://mongodb:27017",
     "DatabaseName": "EnglishLearning_TaskService"
+  },
+  "ConnectionStrings": {
+    "RedisDatabase": "redis_server"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
+    }
   }
 }
