--- a/EnglishLearning.TaskService.Host/EnglishLearning.TaskService.Host.csproj
+++ b/EnglishLearning.TaskService.Host/EnglishLearning.TaskService.Host.csproj
@@ -7,11 +7,25 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Serilog.AspNetCore">
+      <Version>2.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Serilog.Settings.Configuration">
+      <Version>3.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Serilog.Sinks.Console">
+      <Version>3.1.2-dev-00792</Version>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore">
       <Version>4.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EnglishLearning.TaskService.Web\EnglishLearning.TaskService.Web.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="appsettings.json" CopyToOutputDirectory="Always" />
+    <None Include="appsettings.Development.json" CopyToOutputDirectory="Always" />
   </ItemGroup>
 </Project>
