Add EnglishLearningIdentity framework

--- a/EnglishLearning.TaskService.Host/EnglishLearning.TaskService.Host.csproj
+++ b/EnglishLearning.TaskService.Host/EnglishLearning.TaskService.Host.csproj
@@ -6,6 +6,15 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="EnglishLearning.Utilities.General">
+      <Version>1.1.0-CI-20190419-040524</Version>
+    </PackageReference>
+    <PackageReference Include="EnglishLearning.Utilities.Identity">
+      <Version>1.1.0-CI-20190419-040524</Version>
+    </PackageReference>
+    <PackageReference Include="EnglishLearning.Utilities.Persistence.Redis">
+      <Version>1.1.0-CI-20190419-040524</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Serilog.AspNetCore">
       <Version>2.1.1</Version>
