--- a/EnglishLearning.TaskService.Web/EnglishLearning.TaskService.Web.csproj
+++ b/EnglishLearning.TaskService.Web/EnglishLearning.TaskService.Web.csproj
@@ -3,6 +3,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="EnglishLearning.Utilities.Identity.Abstractions">
+      <Version>1.1.0-CI-20190419-040524</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Mvc">
       <Version>2.2.0</Version>
     </PackageReference>
