--- a/EnglishLearning.TaskService.Persistence/EnglishLearning.TaskService.Persistence.csproj
+++ b/EnglishLearning.TaskService.Persistence/EnglishLearning.TaskService.Persistence.csproj
@@ -4,10 +4,10 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="EnglishLearning.Utilities.Linq">
-      <Version>1.1.0-CI-20190903-092043</Version>
+      <Version>1.1.0-CI-20190903-120708</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Persistence.Mongo">
-      <Version>1.1.0-CI-20190903-092043</Version>
+      <Version>1.1.0-CI-20190903-120708</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration">
       <Version>2.2.0</Version>
@@ -21,5 +21,8 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions">
       <Version>2.2.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EnglishLearning.TaskService.Common.Models\EnglishLearning.TaskService.Common.Models.csproj" />
   </ItemGroup>
 </Project>
