--- a/EnglishLearning.TaskService.Host/appsettings.Development.json
+++ b/EnglishLearning.TaskService.Host/appsettings.Development.json
@@ -5,5 +5,9 @@
   },
   "ConnectionStrings": {
     "RedisDatabase": "localhost"
+  },
+  "Kafka": {
+    "ConnectionString": "localhost:9092",
+    "GroupId": "englishlearning-tasks-group"
   }
 }
