--- a/EnglishLearning.TaskService.Host/appsettings.json
+++ b/EnglishLearning.TaskService.Host/appsettings.json
@@ -6,6 +6,10 @@
   "ConnectionStrings": {
     "RedisDatabase": "redis_server"
   },
+  "Kafka": {
+    "ConnectionString": "kafka:9092",
+    "GroupId": "englishlearning-tasks-group"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
