--- a/EnvironmentTools/EnglishTasks.original.json
+++ b/EnvironmentTools/EnglishTasks.original.json
@@ -1,6 +1,6 @@
 {
 	"TaskType": "SimpleBrackets",
-	"GrammarPart": "PRSimple",
+	"GrammarPart": "Present Simple",
 	"EnglishLevel": "PreIntermediate",
 	"Count": 8,
 	"Example": "",
@@ -18,7 +18,7 @@
 }
 {
 	"TaskType": "DivisionBySlash",
-	"GrammarPart": "PrSimpleAndPrContinuous",
+	"GrammarPart": "Present Simple And Present Continuous",
 	"EnglishLevel": "Intermediate",
 	"Count": 8,
 	"Example": "",
@@ -27,7 +27,7 @@
 }
 {
     "TaskType": "CorrectOption",
-    "GrammarPart": "FuturePlans",
+    "GrammarPart": "Future Plans",
     "EnglishLevel": "Intermediate",
     "Count": 8,
     "Example": "",
@@ -36,7 +36,7 @@
 }
 {
     "TaskType": "DivisionBySlash",
-    "GrammarPart": "FuturePlans",
+    "GrammarPart": "Future Plans",
     "EnglishLevel": "Intermediate",
     "Count": 6,
     "Example": "",
@@ -45,7 +45,7 @@
 }
 {
     "TaskType": "SimpleBrackets",
-    "GrammarPart": "QuestionTags",
+    "GrammarPart": "Question Tags",
     "EnglishLevel": "Intermediate",
     "Count": 7,
     "Example": "",
@@ -54,7 +54,7 @@
 }
 {
     "TaskType": "DivisionBySlash",
-    "GrammarPart": "PossessiveAdjectives",
+    "GrammarPart": "Possessive Adjectives",
     "EnglishLevel": "PreIntermediate",
     "Count": 9,
     "Example": "",
@@ -73,7 +73,7 @@
 }
 {
     "TaskType": "SimpleBrackets",
-    "GrammarPart": "PRSimple",
+    "GrammarPart": "Present Simple",
     "EnglishLevel": "PreIntermediate",
     "Count": 8,
     "Example": "",
@@ -109,7 +109,7 @@
 }
 {
     "TaskType": "SimpleBrackets",
-    "GrammarPart": "PRSimple",
+    "GrammarPart": "Present Simple",
     "EnglishLevel": "UpperIntermediate",
     "Count": 9,
     "Example": "",
@@ -118,7 +118,7 @@
 }
 {
     "TaskType": "CorrectOption",
-    "GrammarPart": "PRSimple",
+    "GrammarPart": "Present Simple",
     "EnglishLevel": "PreIntermediate",
     "Count": 10,
     "Example": "",
@@ -127,7 +127,7 @@
 }
 {
     "TaskType": "SimpleBrackets",
-    "GrammarPart": "PRPerfect",
+    "GrammarPart": "Present Perfect",
     "EnglishLevel": "Intermediate",
     "Count": 6,
     "Example": "",
