--- a/EnglishLearning.TaskService.Application.Tests/EnglishLearning.TaskService.Application.Tests.csproj
+++ b/EnglishLearning.TaskService.Application.Tests/EnglishLearning.TaskService.Application.Tests.csproj
@@ -4,6 +4,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="2.6.3" />
     <PackageReference Include="FluentAssertions" Version="5.4.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="NSubstitute" Version="3.1.0" />
