--- a/EnglishLearning.TaskService.Host/appsettings.Development.json
+++ b/EnglishLearning.TaskService.Host/appsettings.Development.json
@@ -9,5 +9,8 @@
   "Kafka": {
     "ConnectionString": "localhost:9092",
     "GroupId": "englishlearning-tasks-group"
+  },
+  "Hangfire": {
+    "ConnectionString": "Server=localhost,1433;Database=EnglishLearning_Hangfire;User=sa;Password=Qwerty123;"
   }
 }
