--- a/EnglishLearning.TaskService.Host/appsettings.json
+++ b/EnglishLearning.TaskService.Host/appsettings.json
@@ -10,12 +10,16 @@
     "ConnectionString": "kafka:9092",
     "GroupId": "englishlearning-tasks-group"
   },
+  "Hangfire": {
+    "ConnectionString": "Server=sql_server,1433;Database=EnglishLearning_Hangfire;User=sa;Password=Qwerty123;"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
         "Microsoft": "Information",
-        "System": "Warning"
+        "System": "Warning",
+        "Hangfire": "Warning"
       }
     }
   }
