Add background job for filtering

--- a/EnglishLearning.TaskService.Host/appsettings.Development.json
+++ b/EnglishLearning.TaskService.Host/appsettings.Development.json
@@ -11,6 +11,7 @@
     "GroupId": "englishlearning-tasks-group"
   },
   "Hangfire": {
-    "ConnectionString": "Server=localhost,1433;Database=EnglishLearning_Hangfire;User=sa;Password=Qwerty123;"
+    "ConnectionString": "Server=localhost,1433;Database=EnglishLearning_Hangfire;User=sa;Password=Qwerty123;",
+    "Interval": "0 0 0/3 ? * *"
   }
 }
