--- a/EnglishLearning.TaskService.Host/appsettings.json
+++ b/EnglishLearning.TaskService.Host/appsettings.json
@@ -11,7 +11,8 @@
     "GroupId": "englishlearning-tasks-group"
   },
   "Hangfire": {
-    "ConnectionString": "Server=sql_server,1433;Database=EnglishLearning_Hangfire;User=sa;Password=Qwerty123;"
+    "ConnectionString": "Server=sql_server,1433;Database=EnglishLearning_Hangfire;User=sa;Password=Qwerty123;",
+    "Interval": "0 0 0/3 ? * *"
   },
   "Serilog": {
     "MinimumLevel": {
