--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -14,8 +14,7 @@ jobs:
       env: 
         BUILD_ID: $(date +%s)
       run: |
-        docker login docker.pkg.github.com --username LytvyniukDima
+        docker login docker.pkg.github.com --username LytvyniukDima --password $REGISTRY_TOKEN
         docker build . --file Dockerfile -t docker.pkg.github.com/LytvyniukDima/EnglishLearning.TaskService/englishlearning-tasks:latest -t docker.pkg.github.com/LytvyniukDima/EnglishLearning.TaskService/englishlearning-tasks:1.$BUILD_ID
         docker push docker.pkg.github.com/LytvyniukDima/EnglishLearning.TaskService/englishlearning-tasks:latest
         docker push docker.pkg.github.com/LytvyniukDima/EnglishLearning.TaskService/englishlearning-tasks:1.$BUILD_ID
-        
