--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -16,6 +16,8 @@ jobs:
         REGISTRY_TOKEN: ${{ secrets.REGISTRY_TOKEN }}
       run: |
         docker login docker.pkg.github.com --username LytvyniukDima --password $REGISTRY_TOKEN
-        docker build . --file Dockerfile -t docker.pkg.github.com/LytvyniukDima/EnglishLearning.TaskService/englishlearning-tasks:latest -t docker.pkg.github.com/LytvyniukDima/EnglishLearning.TaskService/englishlearning-tasks:1.$BUILD_ID
+        docker build . --file Dockerfile -t englishlearning-tasks:1.$BUILD_ID
+        docker tag englishlearning-tasks:1.$BUILD_ID docker.pkg.github.com/LytvyniukDima/EnglishLearning.TaskService/englishlearning-tasks:latest
+        docker tag englishlearning-tasks:1.$BUILD_ID docker.pkg.github.com/LytvyniukDima/EnglishLearning.TaskService/englishlearning-tasks:1.$BUILD_ID
         docker push docker.pkg.github.com/LytvyniukDima/EnglishLearning.TaskService/englishlearning-tasks:latest
         docker push docker.pkg.github.com/LytvyniukDima/EnglishLearning.TaskService/englishlearning-tasks:1.$BUILD_ID
