--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build and Publish the Docker image
       env: 
-        BUILD_ID: ${{ date +%s }}
+        BUILD_ID: ${{ job.container.id }}
         REGISTRY_TOKEN: ${{ secrets.REGISTRY_TOKEN }}
       run: |
         docker login docker.pkg.github.com --username LytvyniukDima --password $REGISTRY_TOKEN
