--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,13 +12,16 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build and Publish the Docker image
       env: 
-        BUILD_ID: ${{ job.container.id }}
+        BUILD_ID: ${{ date +%s }}
         REGISTRY_TOKEN: ${{ secrets.REGISTRY_TOKEN }}
+        MAJOR: 1
+        MINOR: 0
+        PATCH: 0
       run: |
         docker login docker.pkg.github.com --username LytvyniukDima --password $REGISTRY_TOKEN
-        docker build . --file Dockerfile -t englishlearning-tasks:1.$BUILD_ID
-        docker tag englishlearning-tasks:1.$BUILD_ID docker.pkg.github.com/lytvyniukdima/englishlearning.taskservice/englishlearning-tasks:latest
-        docker tag englishlearning-tasks:1.$BUILD_ID docker.pkg.github.com/lytvyniukdima/englishlearning.taskservice/englishlearning-tasks:1.$BUILD_ID
+        docker build . --file Dockerfile -t englishlearning-tasks:$MAJOR.$MINOR.$PATCH-$BUILD_ID
+        docker tag englishlearning-tasks:$MAJOR.$MINOR.$PATCH-$BUILD_ID docker.pkg.github.com/lytvyniukdima/englishlearning.taskservice/englishlearning-tasks:latest
+        docker tag englishlearning-tasks:$MAJOR.$MINOR.$PATCH-$BUILD_ID docker.pkg.github.com/lytvyniukdima/englishlearning.taskservice/englishlearning-tasks:$MAJOR.$MINOR.$PATCH-$BUILD_ID
         docker push docker.pkg.github.com/lytvyniukdima/englishlearning.taskservice/englishlearning-tasks:latest
-        docker push docker.pkg.github.com/lytvyniukdima/englishlearning.taskservice/englishlearning-tasks:1.$BUILD_ID
+        docker push docker.pkg.github.com/lytvyniukdima/englishlearning.taskservice/englishlearning-tasks:$MAJOR.$MINOR.$PATCH-$BUILD_ID
 
