--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build and Publish the Docker image
       env: 
-        BUILD_ID: ${{ date +%s }}
+        BUILD_ID: ${{ $(date +%s) }}
         REGISTRY_TOKEN: ${{ secrets.REGISTRY_TOKEN }}
         MAJOR: 1
         MINOR: 0
