Update build id for pipeline

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,12 +12,13 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build and Publish the Docker image
       env: 
-        BUILD_ID: ${{ $(date +%s) }}
+        #BUILD_ID: ${{ $(date +%s) }}
         REGISTRY_TOKEN: ${{ secrets.REGISTRY_TOKEN }}
         MAJOR: 1
         MINOR: 0
         PATCH: 0
       run: |
+        export BUILD_ID=$(date +%s)
         docker login docker.pkg.github.com --username LytvyniukDima --password $REGISTRY_TOKEN
         docker build . --file Dockerfile -t englishlearning-tasks:$MAJOR.$MINOR.$PATCH-$BUILD_ID
         docker tag englishlearning-tasks:$MAJOR.$MINOR.$PATCH-$BUILD_ID docker.pkg.github.com/lytvyniukdima/englishlearning.taskservice/englishlearning-tasks:latest
