--- a/NuGet.Config
+++ b/NuGet.Config
@@ -1,23 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <solution>
-        <add key="disableSourceControlIntegration" value="true" />
-    </solution>
-    <packageRestore>
-        <add key="enabled" value="True" />
-        <add key="automatic" value="True" />
-    </packageRestore>
     <packageSources>
-        <add key="EnglishLearning" value="https://pkgs.dev.azure.com/englishlearning-study/_packaging/english_learning_nuget/nuget/v3/index.json"/>
+        <clear />
         <add key="NuGet official package source" value="https://api.nuget.org/v3/index.json" />
-    </packageSources>]
-    <activePackageSource>
-        <add key="All" value="(Aggregate source)" />
-    </activePackageSource>
+        <add key="github" value="https://nuget.pkg.github.com/LytvyniukDima/index.json" />
+    </packageSources>
     <packageSourceCredentials>
-        <EnglishLearning>
-            <add key="Username" value="user@englishlearning.com" />
-            <add key="ClearTextPassword" value="fwnbp3j3wrbsr6pj42gaxppxbm7gbwrq44q6netpu52vq4gplvdq" />
-        </EnglishLearning>
+        <github>
+            <add key="Username" value="LytvyniukDima" />
+            <add key="ClearTextPassword" value="%PACKAGES_WORKFLOW_TOKEN%" />
+        </github>
     </packageSourceCredentials>
 </configuration>
