--- a/src/EnglishLearning.TaskService.Application/EnglishLearning.TaskService.Application.csproj
+++ b/src/EnglishLearning.TaskService.Application/EnglishLearning.TaskService.Application.csproj
@@ -1,25 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper">
-      <Version>7.0.1</Version>
+      <Version>10.0.0</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Enums">
-      <Version>1.1.0-CI-20190916-105247</Version>
+      <Version>1.2.0-151155566</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Expressions">
-      <Version>1.1.0-CI-20190916-105247</Version>
+      <Version>1.2.0-151155570</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Identity.Abstractions">
-      <Version>1.1.0-CI-20190916-105247</Version>
+      <Version>1.2.0-151161799</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Linq">
-      <Version>1.1.0-CI-20190916-105247</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc">
-      <Version>2.2.0</Version>
+      <Version>1.2.0-151155557</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
