--- a/src/EnglishLearning.TaskService.EventHandlers/EnglishLearning.TaskService.EventHandlers.csproj
+++ b/src/EnglishLearning.TaskService.EventHandlers/EnglishLearning.TaskService.EventHandlers.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.2</TargetFramework>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="EnglishLearning.Utilities.MessageBrokers.Contracts">
-        <Version>1.1.0-CI-20190916-105247</Version>
+        <Version>1.2.0-151155560</Version>
       </PackageReference>
       <PackageReference Include="EnglishLearning.Utilities.MessageBrokers.Kafka">
-        <Version>1.1.0-CI-20190916-105247</Version>
+        <Version>1.2.0-151155560</Version>
       </PackageReference>
     </ItemGroup>
 
