--- a/src/EnglishLearning.TaskService.Host/EnglishLearning.TaskService.Host.csproj
+++ b/src/EnglishLearning.TaskService.Host/EnglishLearning.TaskService.Host.csproj
@@ -1,32 +1,31 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="EnglishLearning.Utilities.General">
-      <Version>1.1.0-CI-20190916-105247</Version>
+      <Version>1.2.0-151155574</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Identity">
-      <Version>1.1.0-CI-20190916-105247</Version>
+      <Version>1.2.0-151161799</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Persistence.Redis">
-      <Version>1.1.0-CI-20190916-105247</Version>
+      <Version>1.2.0-151158169</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Serilog.AspNetCore">
-      <Version>2.1.1</Version>
+      <Version>3.2.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Settings.Configuration">
-      <Version>3.0.1</Version>
+      <Version>3.1.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Sinks.Console">
       <Version>3.1.2-dev-00792</Version>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore">
-      <Version>4.0.1</Version>
+      <Version>5.5.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
