--- a/src/EnglishLearning.TaskService.Persistence/EnglishLearning.TaskService.Persistence.csproj
+++ b/src/EnglishLearning.TaskService.Persistence/EnglishLearning.TaskService.Persistence.csproj
@@ -1,25 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="EnglishLearning.Utilities.Linq">
-      <Version>1.1.0-CI-20190916-105247</Version>
+      <Version>1.2.0-151155557</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Persistence.Mongo">
-      <Version>1.1.0-CI-20190916-105247</Version>
+      <Version>1.2.0-151158169</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration">
-      <Version>2.2.0</Version>
+      <Version>3.1.5</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
-      <Version>2.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Options">
-      <Version>2.2.0</Version>
+      <Version>3.1.5</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions">
-      <Version>2.2.0</Version>
+      <Version>3.1.5</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
