--- a/src/EnglishLearning.TaskService.Web/EnglishLearning.TaskService.Web.csproj
+++ b/src/EnglishLearning.TaskService.Web/EnglishLearning.TaskService.Web.csproj
@@ -1,14 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="EnglishLearning.Utilities.Identity.Abstractions">
-      <Version>1.1.0-CI-20190916-105247</Version>
+      <Version>1.2.0-151161799</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc">
-      <Version>2.2.0</Version>
-    </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EnglishLearning.TaskService.Application\EnglishLearning.TaskService.Application.csproj" />
