--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,15 +12,14 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build and Publish the Docker image
       env: 
-        BUILD_ID: ${{ GITHUB_RUN_ID }}
         PACKAGES_WORKFLOW_TOKEN: ${{ secrets.PACKAGES_WORKFLOW_TOKEN }}
         MAJOR: 1
         MINOR: 1
         PATCH: 0
       run: |
         docker login docker.pkg.github.com --username LytvyniukDima --password $PACKAGES_WORKFLOW_TOKEN
-        docker build . --file Dockerfile -t englishlearning-tasks:$MAJOR.$MINOR.$PATCH-$BUILD_ID
-        docker tag englishlearning-tasks:$MAJOR.$MINOR.$PATCH-$BUILD_ID docker.pkg.github.com/lytvyniukdima/englishlearning.taskservice/englishlearning-tasks:latest
-        docker tag englishlearning-tasks:$MAJOR.$MINOR.$PATCH-$BUILD_ID docker.pkg.github.com/lytvyniukdima/englishlearning.taskservice/englishlearning-tasks:$MAJOR.$MINOR.$PATCH-$BUILD_ID
+        docker build . --file Dockerfile -t englishlearning-tasks:$MAJOR.$MINOR.$PATCH-$GITHUB_RUN_ID
+        docker tag englishlearning-tasks:$MAJOR.$MINOR.$PATCH-$GITHUB_RUN_ID docker.pkg.github.com/lytvyniukdima/englishlearning.taskservice/englishlearning-tasks:latest
+        docker tag englishlearning-tasks:$MAJOR.$MINOR.$PATCH-$GITHUB_RUN_ID docker.pkg.github.com/lytvyniukdima/englishlearning.taskservice/englishlearning-tasks:$MAJOR.$MINOR.$PATCH-$GITHUB_RUN_ID
         docker push docker.pkg.github.com/lytvyniukdima/englishlearning.taskservice/englishlearning-tasks:latest
-        docker push docker.pkg.github.com/lytvyniukdima/englishlearning.taskservice/englishlearning-tasks:$MAJOR.$MINOR.$PATCH-$BUILD_ID
+        docker push docker.pkg.github.com/lytvyniukdima/englishlearning.taskservice/englishlearning-tasks:$MAJOR.$MINOR.$PATCH-$GITHUB_RUN_ID
