--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -27,7 +27,7 @@ jobs:
     - name: SonarInit
       run: |
         dotnet tool restore
-        dotnet sonarscanner begin /k:"$PROJECT_NAME" /d:sonar.host.url="$SONAR_SERVER_URL" /d:sonar.login="$SONAR_SERVER_TOKEN" /d:sonar.cs.opencover.reportsPaths="./coverage"
+        dotnet sonarscanner begin /k:"$PROJECT_NAME" /d:sonar.host.url="$SONAR_SERVER_URL" /d:sonar.login="$SONAR_SERVER_TOKEN" /d:sonar.cs.opencover.reportsPaths="./coverage.opencover.xml"
     - name: Build
       run: dotnet build -c Release
     - name: Test
