--- a/src/EnglishLearning.TaskService.Application/EnglishLearning.TaskService.Application.csproj
+++ b/src/EnglishLearning.TaskService.Application/EnglishLearning.TaskService.Application.csproj
@@ -1,22 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper">
-      <Version>10.0.0</Version>
+      <Version>10.1.1</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Enums">
-      <Version>1.2.0-151155566</Version>
+      <Version>1.3.0-359873729</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Expressions">
-      <Version>1.2.0-151155570</Version>
+      <Version>1.3.0-359873751</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Identity.Abstractions">
-      <Version>1.2.0-151161799</Version>
+      <Version>1.3.0-359873728</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Linq">
-      <Version>1.2.0-151155557</Version>
+      <Version>1.3.0-359873750</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
