--- a/src/EnglishLearning.TaskService.BackgroundJobs/EnglishLearning.TaskService.BackgroundJobs.csproj
+++ b/src/EnglishLearning.TaskService.BackgroundJobs/EnglishLearning.TaskService.BackgroundJobs.csproj
@@ -1,21 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Hangfire.AspNetCore">
-            <Version>1.7.11</Version>
+            <Version>1.7.17</Version>
         </PackageReference>
         <PackageReference Include="Hangfire.Core">
-            <Version>1.7.11</Version>
+            <Version>1.7.17</Version>
         </PackageReference>
         <PackageReference Include="HangFire.SqlServer">
-            <Version>1.7.11</Version>
+            <Version>1.7.17</Version>
         </PackageReference>
         <PackageReference Include="Serilog">
-            <Version>2.9.0</Version>
+            <Version>2.10.0</Version>
         </PackageReference>
     </ItemGroup>
 
