--- a/src/EnglishLearning.TaskService.EventHandlers/EnglishLearning.TaskService.EventHandlers.csproj
+++ b/src/EnglishLearning.TaskService.EventHandlers/EnglishLearning.TaskService.EventHandlers.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="EnglishLearning.Utilities.MessageBrokers.Contracts">
-        <Version>1.2.0-182984408</Version>
+        <Version>1.3.0-359873744</Version>
       </PackageReference>
       <PackageReference Include="EnglishLearning.Utilities.MessageBrokers.Kafka">
-        <Version>1.2.0-183018247</Version>
+        <Version>1.3.0-359873744</Version>
       </PackageReference>
     </ItemGroup>
 
