--- a/src/EnglishLearning.TaskService.Host/EnglishLearning.TaskService.Host.csproj
+++ b/src/EnglishLearning.TaskService.Host/EnglishLearning.TaskService.Host.csproj
@@ -1,22 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="EnglishLearning.Utilities.General">
-      <Version>1.2.0-151155574</Version>
+      <Version>1.3.0-359873741</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Identity">
-      <Version>1.2.0-151161799</Version>
+      <Version>1.3.0-359873728</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Persistence.Redis">
-      <Version>1.2.0-151158169</Version>
+      <Version>1.3.0-359873747</Version>
     </PackageReference>
     <PackageReference Include="Serilog.AspNetCore">
-      <Version>3.2.0</Version>
+      <Version>3.4.0</Version>
     </PackageReference>
     <PackageReference Include="Serilog.Settings.Configuration">
       <Version>3.1.0</Version>
@@ -25,7 +25,7 @@
       <Version>3.1.2-dev-00792</Version>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore">
-      <Version>5.5.1</Version>
+      <Version>5.6.3</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
