--- a/src/EnglishLearning.TaskService.Persistence/EnglishLearning.TaskService.Persistence.csproj
+++ b/src/EnglishLearning.TaskService.Persistence/EnglishLearning.TaskService.Persistence.csproj
@@ -1,22 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="EnglishLearning.Utilities.Linq">
-      <Version>1.2.0-151155557</Version>
+      <Version>1.3.0-359873750</Version>
     </PackageReference>
     <PackageReference Include="EnglishLearning.Utilities.Persistence.Mongo">
-      <Version>1.2.0-151158169</Version>
+      <Version>1.3.0-359873747</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration">
-      <Version>3.1.5</Version>
+      <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
-      <Version>3.1.5</Version>
+      <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions">
-      <Version>3.1.5</Version>
+      <Version>5.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
