--- a/src/EnglishLearning.TaskService.Web/EnglishLearning.TaskService.Web.csproj
+++ b/src/EnglishLearning.TaskService.Web/EnglishLearning.TaskService.Web.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="EnglishLearning.Utilities.Identity.Abstractions">
-      <Version>1.2.0-151161799</Version>
+      <Version>1.3.0-359873728</Version>
     </PackageReference>
-    <PackageReference Include="EnglishLearning.Utilities.Linq" Version="1.2.0-200402207"/>
+    <PackageReference Include="EnglishLearning.Utilities.Linq" Version="1.3.0-359873750"/>
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
   <ItemGroup>
