--- a/src/EnglishLearning.TaskService.Application/EnglishLearning.TaskService.Application.csproj
+++ b/src/EnglishLearning.TaskService.Application/EnglishLearning.TaskService.Application.csproj
@@ -20,6 +20,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\EnglishLearning.TaskService.ExternalServices\EnglishLearning.TaskService.ExternalServices.csproj" />
     <ProjectReference Include="..\EnglishLearning.TaskService.Persistence\EnglishLearning.TaskService.Persistence.csproj" />
   </ItemGroup>
 </Project>
