feat: setup word metadata client

--- a/src/EnglishLearning.TaskService.Host/appsettings.Development.json
+++ b/src/EnglishLearning.TaskService.Host/appsettings.Development.json
@@ -13,5 +13,8 @@
   "Hangfire": {
     "ConnectionString": "Server=localhost,1433;Database=EnglishLearning_Hangfire;User=sa;Password=Qwerty123;",
     "Interval": "0 0 0/3 ? * *"
+  },
+  "ExternalServices": {
+    "Dictionary": "http://dictionary_service:8200"
   }
 }
