--- a/src/EnglishLearning.TaskService.Host/appsettings.json
+++ b/src/EnglishLearning.TaskService.Host/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning",
+        "Hangfire": "Warning"
+      }
+    }
+  },
   "MongoConfiguration": {
     "ServerAddress": "mongodb://mongodb:27017",
     "DatabaseName": "EnglishLearning_TaskService"
@@ -14,14 +24,7 @@
     "ConnectionString": "Server=sql_server,1433;Database=EnglishLearning_Hangfire;User=sa;Password=Qwerty123;",
     "Interval": "0 0 0/3 ? * *"
   },
-  "Serilog": {
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Information",
-        "System": "Warning",
-        "Hangfire": "Warning"
-      }
-    }
+  "ExternalServices": {
+    "Dictionary": "http://localhost:8200"
   }
 }
