feat: integrate dictionary service

--- a/src/EnglishLearning.TaskService.Host/appsettings.Development.json
+++ b/src/EnglishLearning.TaskService.Host/appsettings.Development.json
@@ -15,6 +15,6 @@
     "Interval": "0 0 0/3 ? * *"
   },
   "ExternalServices": {
-    "Dictionary": "http://dictionary_service:8200"
+    "Dictionary": "http://localhost:8200"
   }
 }
