--- a/src/EnglishLearning.TaskService.Host/appsettings.json
+++ b/src/EnglishLearning.TaskService.Host/appsettings.json
@@ -25,6 +25,6 @@
     "Interval": "0 0 0/3 ? * *"
   },
   "ExternalServices": {
-    "Dictionary": "http://localhost:8200"
+    "Dictionary": "http://dictionary_service:8200"
   }
 }
