--- a/src/EnglishLearning.TaskService.Application/EnglishLearning.TaskService.Application.csproj
+++ b/src/EnglishLearning.TaskService.Application/EnglishLearning.TaskService.Application.csproj
@@ -18,6 +18,9 @@
     <PackageReference Include="EnglishLearning.Utilities.Linq">
       <Version>1.3.0-564331744</Version>
     </PackageReference>
+    <PackageReference Include="EnglishLearning.Utilities.Speech.Contracts">
+      <Version>1.0.4</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EnglishLearning.TaskService.ExternalServices\EnglishLearning.TaskService.ExternalServices.csproj" />
