--- a/src/EnglishLearning.TaskService.Host/EnglishLearning.TaskService.Host.csproj
+++ b/src/EnglishLearning.TaskService.Host/EnglishLearning.TaskService.Host.csproj
@@ -25,6 +25,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore">
       <Version>5.6.3</Version>
     </PackageReference>
+    <PackageReference Include="EnglishLearning.Utilities.Speech">
+      <Version>1.0.4</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EnglishLearning.TaskService.BackgroundJobs\EnglishLearning.TaskService.BackgroundJobs.csproj" />
